Deleted references to Jeanine White (template).

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.scss';
-const { title = 'Jeanine White: Personal Site', description = 'The personal site of Jeanine White' } = Astro.props;
+const { title = 'Adam Ambrosino: Personal Site', description = 'The portfolio of Adam Ambrosino' } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
