--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,7 +15,7 @@ const projects = Astro.fetchContent<MarkdownFrontmatter>('./project/**/*.md')
 
 <html lang="en">
 	<head>
-		<MainHead title="All Projects | Jeanine White" description="Learn about Jenine White's most recent projects" />
+		<MainHead title="All Projects | Adam Ambrosino" description="Learn about Adam Ambrosino's most recent projects" />
 		<style lang="scss">
 			.grid {
 				display: grid;
