--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -15,7 +15,7 @@ const skills = Astro.fetchContent<MarkdownFrontmatter>('./skill/**/*.md')
 
 <html lang="en">
 	<head>
-		<MainHead title="All Skills | Jeanine White" description="Learn about Jenine White's most recent skills" />
+		<MainHead title="All Skills | Adam Ambrosino" description="Learn about Adam Ambrosino's skills" />
 		<style lang="scss">
 			.grid {
 				display: grid;
