--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const featuredProject = projects[0];
 
 <html lang="en">
 	<head>
-		<MainHead title="Jeanine White: Personal Site" description="Jeanine White: Developer, Speaker, and Writer..." />
+		<MainHead title="Adam Ambrosino: Portfolio" description="Adam Ambrosino: Software Engineer" />
 		<style lang="scss">
 			$w-s: 750px;
 
@@ -180,14 +180,12 @@ const featuredProject = projects[0];
 			<div class="gradient2"></div>
 			<div class="overlay">
 				<h1 class="title">
-					<small class="subtitle">The personal site of </small>Jeanine White
+					<small class="subtitle">The portfolio of </small>Adam Ambrosino
 				</h1>
 				<div>
-					<span class="role">👩‍💻 Developer <span class="invert">👩‍💻 Developer</span></span>&nbsp;
-					<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>&nbsp;
-					<span class="role">✏️ Writer <span class="invert">✏️ Writer</span></span>
+					<span class="role">👩‍💻 Software Engineer <span class="invert">👩‍💻 Software Engineer</span></span>&nbsp;
 				</div>
-				<p class="desc">Lover of dogs, roadtrips, and poetry.</p>
+				<p class="desc">Lorem Ipsum Dolor Sit Amet.</p>
 			</div>
 		</header>
 		<main class="wrapper mt4 mb4">
@@ -204,9 +202,8 @@ const featuredProject = projects[0];
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m Jeanine, and this is my website. It was made using{' '}
-						<a href="https://github.com/withastro/astro" target="_blank" rel="nofollow"> Astro </a>, a new way to build static sites. This is just an example template for you to
-						modify.
+						<span>Hello!</span> I’m Adam, and this is my website. It was made using{' '}
+						<a href="https://github.com/withastro/astro" target="_blank" rel="nofollow"> Astro </a>, a new way to build static sites.
 					</p>
 					<p>
 						<a href="/about">Read more</a>
