Applied JS fixes.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,13 @@ h2 {
 h3 {
 	font-size: large !important;
 }
+code {
+	color: black;
+	background-color: lightgrey;
+}
+p {
+	text-align: justify;
+}
 
 // Tokens
 :root {
