--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,9 @@ h2 {
 h3 {
 	font-size: large !important;
 }
+code {
+	background-color: inherit;
+}
 p > code {
 	color: black !important;
 	background-color: lightgrey;
