CSS fix for code.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,7 +11,7 @@ h3 {
 }
 code {
 	background-color: inherit;
-	overflow-x: auto;
+	overflow-x: auto !important;
 }
 p > code {
 	color: black !important;
